# eclipsefp-happy

./: .project  happy-test.cabal
src/: Calc.y  Main.hs
