name:           happy-test
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Tsuyoshi Ito

executable happy-test
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4, array >= 0.3 && < 0.4
  build-tools:     happy
  ghc-options:     -Wall
  other-modules:   Calc
